# EGT309_PROJ1

./: Dockerfile.Main  Dockerfile.run  README.md  eda.ipynb  pyproject.toml  requirements  requirements.txt  run.sh
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_data_science.yml
src/egt309_proj1/: __init__.py  __main__.py  hooks.py  settings.py
src/egt309_proj1/pipelines/data_processing/: nodes.py  pipeline.py
src/egt309_proj1/pipelines/data_science/: nodes.py  pipeline.py
src/egt309_proj1/pipelines/reporting/: nodes.py  pipeline.py
